<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <Button
            android:id="@+id/simple_service"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="#4CB6E8"
            android:text="@string/service"
            app:layout_constraintBottom_toTopOf="@+id/foreground_service"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/foreground_service"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="#4CB6E8"
            android:text="@string/foreground_service"
            app:layout_constraintBottom_toTopOf="@+id/intent_service"
            app:layout_constraintTop_toBottomOf="@+id/simple_service"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/intent_service"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="#4CB6E8"
            android:text="@string/intent_service"
            app:layout_constraintBottom_toTopOf="@+id/job_scheduler"
            app:layout_constraintTop_toBottomOf="@+id/foreground_service"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/job_scheduler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="#4CB6E8"
            android:text="@string/job_scheduler"
            app:layout_constraintBottom_toTopOf="@+id/job_intent_dispatcher"
            app:layout_constraintTop_toBottomOf="@+id/intent_service"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/job_intent_dispatcher"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="#4CB6E8"
            android:text="@string/job_intent_service"
            app:layout_constraintBottom_toTopOf="@+id/alarm_manager"
            app:layout_constraintTop_toBottomOf="@+id/job_scheduler"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/alarm_manager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="#4CB6E8"
            android:text="@string/alarm_meneger"
            app:layout_constraintBottom_toTopOf="@+id/work_manager"
            app:layout_constraintTop_toBottomOf="@+id/job_intent_dispatcher"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/work_manager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="#4CB6E8"
            android:text="@string/work_manager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_manager"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>